--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@hashgraph/sdk": "^2.11.3",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "input": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
